[tool.poetry]
name = "some-project"
version = "0.1.0"
description = ""
authors = ["Rammsat <saturn9911@mail.ru>"]
readme = "README.md"
packages = [{include = "some_project"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.1"
selene = "2.0.0b16"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
